fixed label styling bleed over into admin theme

--- a/components/_patterns/01-atoms/02-form_elements/04-label/_label.scss
+++ b/components/_patterns/01-atoms/02-form_elements/04-label/_label.scss
@@ -9,6 +9,6 @@
   padding: #{$padding};
 }
 
-.label {
+.txex-label {
   @include label;
 }
